unit tests added and debugging